e2e/agic/wafpolicymanual/input/ingress-waf-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: contoso.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: contoso-service
                port:
                  number: 80
            pathType: Exact
